# ID2223_finetuning

./: .gitignore  ID2223_fine_tuning_.ipynb  README.md  inference.py
server/: README.md  main.py  pyproject.toml
server/src/: __init__.py
server/src/llm/: __init__.py  base.py  factory.py  finetome_provider.py  mock_provider.py
server/src/search/: __init__.py  query_generator.py  searcher.py
test/: extract_samples.py  pyproject.toml  test_dataset.json  tests.py
test/judge/base 3b/: judge_report.html
test/judge/base 3b/assets/: tests.py__test_finance_judge_finance_01a9ceb6__0_0.txt  tests.py__test_finance_judge_finance_01a9ceb6__1_0.txt  tests.py__test_finance_judge_finance_01a9ceb6__2_0.txt  tests.py__test_finance_judge_finance_01a9ceb6__4_0.txt  tests.py__test_finance_judge_finance_026e8820__0_0.txt  tests.py__test_finance_judge_finance_026e8820__1_0.txt  tests.py__test_finance_judge_finance_026e8820__2_0.txt  tests.py__test_finance_judge_finance_026e8820__3_0.txt  tests.py__test_finance_judge_finance_026e8820__4_0.txt  tests.py__test_finance_judge_finance_02c9428b__0_0.txt  tests.py__test_finance_judge_finance_02c9428b__1_0.txt  tests.py__test_finance_judge_finance_02c9428b__2_0.txt  tests.py__test_finance_judge_finance_02c9428b__4_0.txt  tests.py__test_finance_judge_finance_05c27fed__0_0.txt  tests.py__test_finance_judge_finance_05c27fed__1_0.txt  tests.py__test_finance_judge_finance_05c27fed__2_0.txt  (+426 more)
test/reports/llama3.2-1b-base/: report.html
test/reports/llama3.2-3b-base/: report.html
test/reports/llama3.2-3b-lora/: report.html
(+1006 files in other folders)
