[project]
name = "finetuned-finetome"
version = "0.1.0"
description = "Gradio app with finetuned LLM and internet search capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.54.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.74.1",
    "gradio>=6.0.1",
    "requests>=2.32.5",
    "ddgs>=9.9.1",
]

[tool.uv]
dev-dependencies = []
